--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     network_mode: bridge
     volumes:
       - "$PWD:/app"
+      - deps_cache:/app/deps
+      - build_cache:/app/_build
     links:
       - postgres
     ports:
@@ -36,3 +38,7 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: adopt_a_family_dev, adopt_a_family_test
+
+volumes:
+  deps_cache:
+  build_cache:
