Make postgres available outside of docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     image: postgres:9.6
     container_name: adopt_a_family_postgres
     network_mode: bridge
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
